Set correct height and made the last section stretch with flex

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,19 @@ html {
 body {
   padding: 0;
   margin: 0;
+  height: 100vh;
 }
 
 ul {
   list-style: none;
   padding-left: 0;
   margin: 0;
+}
+
+main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -57,6 +64,7 @@ ul {
 
 .item-list {
   background-color: var(--main-color);
+  flex: 1;
 }
 
 .item-list__item {
